methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:26: error: illegal start of declaration
  for (a<- 1 to 4) {faireV()}
  ^